samples/_failures_safe/1761610355_1128b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5792d85.c: In function ‘main’:
./samples/SAFE/__tmp_d5792d85.c:161:15: error: expected ‘;’ at end of input
  161 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_d5792d85.c:161:9: error: expected declaration or statement at end of input
  161 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_d5792d85.c:161:9: error: expected declaration or statement at end of input
